# VJxx.asm

./: .buildconfig  .gitignore  Makefile  README.md  asm-face.c  bmp.c  bmp.h  integral_image.c  integral_image.h  meson.build  x86.env  x86.txt
VJxx/: meson.build
VJxx.py/: VJxx.py  cv2vjxx.py  run.py
VJxx/include/VJxx/: area.h  bmp.h  cascade_classifier.h  haar_features.h  integral_image.h  model.h  strong_classifier.h  weak_classifier.h
VJxx/src/: area.c  bmp.c  cascade_classifier.c  haar_features.asm  haar_features.c  integral_image.asm  integral_image.c  meson.build  model.asm  strong_classifier.c  weak_classifier.c
VJxx/tests/: bmp_parser_standard.c  haar_x2.c  haar_x2y2.c  haar_x3.c  haar_y2.c  haar_y3.c  integral_image.c  meson.build  sum_area.c
asmface/: meson.build
asmface/include/: haar_features.h  integral_image.h
asmface/src/: bmp.c  haar_features.c  integral_image.c  meson.build
asmface/tests/: bmp_parser_standard.c  integral_image.c  meson.build  sum_area.c
src/: Makefile  asm-face.asm  asm-face.c  integral_image.c  integral_image.h  meson.build
train/: VJ.py
